<resources>
    <string name="app_name">GiftGiving</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="friends">Friends</string>
    <string name="groups">Groups</string>
    <string name="profile">Profile</string>
    <string name="new_user">New User</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="type_prompt">Choose a Group Type</string>
    <string name="select_friends_to_add">Select Friends to Add</string>
    <string name="addViaF">Add Via Facebook</string>
    <string name="addVE">Add Via Email</string>

    <string-array name="group_types">
        <item>Secret Santa</item>
        <item>Registry</item>
    </string-array>
</resources>
