<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sign In"
        android:textAlignment="center"
        android:textSize="30sp"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/nameTextBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/name"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/emailTextBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/email"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/usernameTextBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/username"/>

    <EditText
        android:id="@+id/passwordTextBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:hint="@string/password"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add Photo"
        android:layout_margin="20dp"
        android:id="@+id/photoBtn"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_user"
            android:id="@+id/newUserBtn"
            android:layout_marginTop="20dp"
            android:layout_marginStart="50dp"
            android:onClick="newUserClicked"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:id="@+id/signIn"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp" />
    </LinearLayout>

</LinearLayout>